--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+1.1.3 2026-01-28
+- feat: add README_fr.md for bilingual documentation support.
+- doc: synchronize project structure links in README.md.
+
 1.1.2 2026-01-28
 - feat: standardize cluster naming convention to galera-* and repli-*.
 - fix: centralize root credentials via .env in Makefile, docker-compose, and scripts.
