doc: add integral test plan for all platforms and versions

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 1.1.5 2026-01-28
 - feat: add lifecycle, data injection, and benchmarking skills to .agent/skills/ for automated project usage using AFF format.
+- doc: define and document the integral test plan covering all platforms and versions in documentation/INTEGRAL_TEST_PLAN.md.
 - fix: remove hardcoded root passwords from scripts/ and tests/ (backup, restore, setup, profiles, performance tests) and replace with .env/environment variable support.
 - test: verify MariaDB 11.8 integration and data injection after resolving volume staleness issues.
 
