chore: strengthen .gitignore and update Changelog for v1.1.9

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,5 @@
 1.1.9 2026-01-30
-
-- 
+- chore: strengthened .gitignore with comprehensive patterns for laboratory artifacts, SSL, and secrets.
 
 
 1.1.8 2026-01-30
