--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,5 @@
 1.1.12 2026-01-30
-
-- 
+- feat: introduced go-agent super manager workflow to coordinate skills, rules, and sub-workflows.
 
 1.1.11 2026-01-30
 - chore: restored .agent/ tracking at user request to maintain governance rules in remote repository.
